    (default: 0, which keeps current behaviour) [interduo]
  - improvement: allow to quickly resend existing message [chilan]
  - enhancement: implemeneted main menu item visibility toggle basing on user permissions [chilan]
  - improvement: allow to hide createtime in ticket row (variable:
    rt.hide_ticket_row_create_time, default: 0) [interduo]

version 25.0 (2020-05-15):

  - improvement: introduced invoices.hide_ssn configuration variable which allows to hide SSN
    on invoices [chilan]
  - improvement: show icon correspondent to netdevnode online status in netdevinfo [ravvar]
  - devel: bumped required php version to 5.6 [chilan]
  - devel: bumped required phpmailer version to 6.x [chilan]
  - improvement: show online status for network devices ip addresses [chilan]
  - improvement: show device online status on network device list [chilan]
  - enhancement: online status filter on network device list [chilan]
  - improvement: added shortcut to print customer balance from customer balance box [chilan]
  - enhancement: userpanel: callback mechanism introduced which allows to generate html content
    from hidden module [chilan]
  - enhancement: userpanel: urgent notices are shown independently of active tab/module [chilan]
  - enhancement: userpanel: special icon on notices tab inform if there are any unread
    notices [chilan]
  - enhancement: allow to prefer generation of settlements only - when
    payments.prefer_settlement_only set to 'true' [chilan]
  - improvement: phpui.speed_unit_type and phpui.speed_unit_aggregation_threshold control
    bandwith unit presentation [chilan]
  - improvement: add date category to filter in messages list [ravvar]
  - improvement: data-target-url attribute support has been improved and is far
    easier to use [chilan]
  - enhancement: icon near customer addresses which redirect to google maps places [chilan]
  - improvement: allow to change owner and queue during group message reply [chilan]